# ROS-Control-GUI

using-cpp/: README.md
using-cpp/qtros/: CMakeLists.txt  package.xml
using-cpp/qtros/include/qtros/: main_window.hpp  qnode.hpp
using-cpp/qtros/src/: main_window.cpp  qnode.cpp
using-cpp/qtros/ui/: main_window.ui
using-python/: README.md
using-python/nav_manager/: CMakeLists.txt  package.xml
using-python/nav_manager/scripts/: nav_manager
using-python/nav_manager/src/events/: button.py  ros_manage.py
using-python/nav_manager/src/views/: main_view.py
